--- a/styles.css
+++ b/styles.css
@@ -151,14 +151,27 @@ svg {
   max-width: 100%;
 }
 
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  margin: 0;
+}
+
 html {
+  height: 100%;
   font-family: "Manrope", sans-serif;
   font-size: 13px;
   background-color: var(--light-greyish-blue);
 }
 
 .main-container {
-  margin: 4em auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 0 auto;
   margin-bottom: 0;
   width: 90%;
   max-width: 400px;
@@ -325,18 +338,20 @@ html {
 
 @media (min-width: 1024px) {
   .main-container {
-    display: flex;
+    flex-direction: row;
     max-width: 1200px;
     min-height: 40vh;
+    align-items: stretch;
+    justify-content: center;
   }
 
   .dresser-img {
     border-radius: 12px 0px 0 12px;
-    position: relative;
     object-fit: cover;
+    width: 50%;
+    position: relative;
     left: 0;
     margin-right: -10%;
-    width: 100%;
   }
 
   .main-container > .dresser-img,
@@ -345,17 +360,17 @@ html {
   }
 
   .main-container h2 {
-    font-size: 1.8rem;
+    font-size: 2.3rem;
     letter-spacing: 0.25px;
-    line-height: 2.5rem;
+    line-height: 3.2rem;
   }
 
   .main-container p {
-    font-size: 1.3rem;
+    font-size: 1.5rem;
     color: var(--greyish-blue);
     letter-spacing: 0.25px;
-    line-height: 1.8rem;
-    margin-top: 2.3em;
+    line-height: 2.5rem;
+    margin-top: 1.5em;
   }
 
   .description {
@@ -368,8 +383,9 @@ html {
     justify-content: space-between;
     background-color: var(--white);
     border-radius: 0px 12px 12px 0;
-    padding: 3em;
+    padding: 4em;
     z-index: 1;
+    width: 50%;
   }
 
   .contact-section {
@@ -409,25 +425,5 @@ html {
 
   .push {
     display: none;
-  }
-}
-
-@media (min-width: 1440px) {
-  .main-container h2 {
-    font-size: 2.3rem;
-    letter-spacing: 0.25px;
-    line-height: 3.2rem;
-  }
-
-  .main-container p {
-    font-size: 1.5rem;
-    color: var(--greyish-blue);
-    letter-spacing: 0.25px;
-    line-height: 2.5rem;
-    margin-top: 2.3em;
-  }
-
-  .sub-container {
-    padding: 4em;
   }
 }
